@@ -797,6 +797,11 @@ CREATE TABLE IF NOT EXISTS `sabretooth`.`interview_phone_call_status_count` (`in
 CREATE TABLE IF NOT EXISTS `sabretooth`.`participant_last_appointment` (`participant_id` INT, `appointment_id` INT, `reached` INT);
 
 -- -----------------------------------------------------
+-- Placeholder table for view `sabretooth`.`participant_last_interview`
+-- -----------------------------------------------------
+CREATE TABLE IF NOT EXISTS `sabretooth`.`participant_last_interview` (`participant_id` INT, `interview_id` INT);
+
+-- -----------------------------------------------------
 -- View `sabretooth`.`assignment_last_phone_call`
 -- -----------------------------------------------------
 DROP VIEW IF EXISTS `sabretooth`.`assignment_last_phone_call` ;
@@ -862,6 +867,22 @@ AND t1.datetime = (
   SELECT MAX( t2.datetime ) FROM appointment t2
   WHERE t1.participant_id = t2.participant_id )
 GROUP BY participant.id;
+
+-- -----------------------------------------------------
+-- View `sabretooth`.`participant_last_interview`
+-- -----------------------------------------------------
+DROP VIEW IF EXISTS `sabretooth`.`participant_last_interview` ;
+DROP TABLE IF EXISTS `sabretooth`.`participant_last_interview`;
+USE `sabretooth`;
+CREATE  OR REPLACE VIEW `sabretooth`.`participant_last_interview` AS
+SELECT interview_1.participant_id, interview_1.id AS interview_id
+FROM interview AS interview_1
+JOIN qnaire AS qnaire_1 ON interview_1.qnaire_id = qnaire_1.id
+WHERE qnaire_1.rank = (
+  SELECT MAX( qnaire_2.rank )
+  FROM qnaire AS qnaire_2
+  JOIN interview AS interview_2 ON qnaire_2.id = interview_2.qnaire_id
+  WHERE interview_2.participant_id = interview_1.participant_id );
 USE `cenozo`;
 
 DELIMITER $$
