@@ -27,6 +27,8 @@
     consent
   - May be restricted by interview complete date
 
+* Adding "last call result" to participant report parameters
+
 ====================================================================================================
 1.2.0
 ====================================================================================================
